--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -1658,6 +1658,675 @@
    "source": [
     "m[:,0:2]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 0, 6, 1, 5],\n",
+       "       [2, 0, 9, 0, 2],\n",
+       "       [6, 7, 3, 3, 3],\n",
+       "       [1, 4, 1, 6, 2],\n",
+       "       [2, 1, 2, 2, 1]])"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.random.randint(10,size = (5,5))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 0],\n",
+       "       [2, 0],\n",
+       "       [6, 7]])"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alt_a = a[0:3,0:2]\n",
+    "alt_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[9999,    0,    6,    1,    5],\n",
+       "       [   2,    0,    9,    0,    2],\n",
+       "       [   6,    7,    3,    3,    3],\n",
+       "       [   1,    4,    1,    6,    2],\n",
+       "       [   2,    1,    2,    2,    1]])"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alt_a[0,0] = 9999\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 5, 6, 6, 3],\n",
+       "       [1, 2, 8, 8, 6],\n",
+       "       [7, 4, 5, 1, 2],\n",
+       "       [9, 5, 8, 3, 4],\n",
+       "       [6, 6, 6, 7, 7]])"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = np.random.randint(10,size = (5,5))\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alt_b = m[0:3,0:2].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[9999,    5],\n",
+       "       [   1,    2],\n",
+       "       [   7,    4]])"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alt_b[0,0] = 9999\n",
+    "alt_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 5, 6, 6, 3],\n",
+       "       [1, 2, 8, 8, 6],\n",
+       "       [7, 4, 5, 1, 2],\n",
+       "       [9, 5, 8, 3, 4],\n",
+       "       [6, 6, 6, 7, 7]])"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fancy Index ile Elemanlara Erişmek"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  3,  6,  9, 12, 15, 18, 21, 24, 27])"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = np.arange(0,30,3)\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 9, 15]"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[v[1],v[3],v[5]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alt_index = [1,3,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3,  9, 15])"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v[alt_index]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### iki boyutta fancy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [3, 4, 5],\n",
+       "       [6, 7, 8]])"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = np.arange(9).reshape((3,3))\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "satir = np.array([0,2])\n",
+    "sutun = np.array([0,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 8])"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[satir,sutun]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [3, 4, 5]])"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[0:2,0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2])"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[0,[1,2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [4, 5],\n",
+       "       [7, 8]])"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[:,[1,2]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Koşullu Eleman İşlemleri"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = np.array([1,2,3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False])"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v>5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 5])"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v[v >2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 5])"
+      ]
+     },
+     "execution_count": 245,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v[v>=3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3])"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v[v==3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 4, 5])"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v[v!=3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matematiksel İşlemler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = np.array([1,2,3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mType:\u001b[0m        module\n",
+      "\u001b[0;31mString form:\u001b[0m <module 'numpy' from '/opt/homebrew/lib/python3.10/site-packages/numpy/__init__.py'>\n",
+      "\u001b[0;31mFile:\u001b[0m        /opt/homebrew/lib/python3.10/site-packages/numpy/__init__.py\n",
+      "\u001b[0;31mDocstring:\u001b[0m  \n",
+      "NumPy\n",
+      "=====\n",
+      "\n",
+      "Provides\n",
+      "  1. An array object of arbitrary homogeneous items\n",
+      "  2. Fast mathematical operations over arrays\n",
+      "  3. Linear Algebra, Fourier Transforms, Random Number Generation\n",
+      "\n",
+      "How to use the documentation\n",
+      "----------------------------\n",
+      "Documentation is available in two forms: docstrings provided\n",
+      "with the code, and a loose standing reference guide, available from\n",
+      "`the NumPy homepage <https://numpy.org>`_.\n",
+      "\n",
+      "We recommend exploring the docstrings using\n",
+      "`IPython <https://ipython.org>`_, an advanced Python shell with\n",
+      "TAB-completion and introspection capabilities.  See below for further\n",
+      "instructions.\n",
+      "\n",
+      "The docstring examples assume that `numpy` has been imported as ``np``::\n",
+      "\n",
+      "  >>> import numpy as np\n",
+      "\n",
+      "Code snippets are indicated by three greater-than signs::\n",
+      "\n",
+      "  >>> x = 42\n",
+      "  >>> x = x + 1\n",
+      "\n",
+      "Use the built-in ``help`` function to view a function's docstring::\n",
+      "\n",
+      "  >>> help(np.sort)\n",
+      "  ... # doctest: +SKIP\n",
+      "\n",
+      "For some objects, ``np.info(obj)`` may provide additional help.  This is\n",
+      "particularly true if you see the line \"Help on ufunc object:\" at the top\n",
+      "of the help() page.  Ufuncs are implemented in C, not Python, for speed.\n",
+      "The native Python help() does not know how to view their help, but our\n",
+      "np.info() function does.\n",
+      "\n",
+      "To search for documents containing a keyword, do::\n",
+      "\n",
+      "  >>> np.lookfor('keyword')\n",
+      "  ... # doctest: +SKIP\n",
+      "\n",
+      "General-purpose documents like a glossary and help on the basic concepts\n",
+      "of numpy are available under the ``doc`` sub-module::\n",
+      "\n",
+      "  >>> from numpy import doc\n",
+      "  >>> help(doc)\n",
+      "  ... # doctest: +SKIP\n",
+      "\n",
+      "Available subpackages\n",
+      "---------------------\n",
+      "lib\n",
+      "    Basic functions used by several sub-packages.\n",
+      "random\n",
+      "    Core Random Tools\n",
+      "linalg\n",
+      "    Core Linear Algebra Tools\n",
+      "fft\n",
+      "    Core FFT routines\n",
+      "polynomial\n",
+      "    Polynomial tools\n",
+      "testing\n",
+      "    NumPy testing tools\n",
+      "distutils\n",
+      "    Enhancements to distutils with support for\n",
+      "    Fortran compilers support and more.\n",
+      "\n",
+      "Utilities\n",
+      "---------\n",
+      "test\n",
+      "    Run numpy unittests\n",
+      "show_config\n",
+      "    Show numpy build configuration\n",
+      "dual\n",
+      "    Overwrite certain functions with high-performance SciPy tools.\n",
+      "    Note: `numpy.dual` is deprecated.  Use the functions from NumPy or Scipy\n",
+      "    directly instead of importing them from `numpy.dual`.\n",
+      "matlib\n",
+      "    Make everything matrices.\n",
+      "__version__\n",
+      "    NumPy version string\n",
+      "\n",
+      "Viewing documentation using IPython\n",
+      "-----------------------------------\n",
+      "\n",
+      "Start IPython and import `numpy` usually under the alias ``np``: `import\n",
+      "numpy as np`.  Then, directly past or use the ``%cpaste`` magic to paste\n",
+      "examples into the shell.  To see which functions are available in `numpy`,\n",
+      "type ``np.<TAB>`` (where ``<TAB>`` refers to the TAB key), or use\n",
+      "``np.*cos*?<ENTER>`` (where ``<ENTER>`` refers to the ENTER key) to narrow\n",
+      "down the list.  To view the docstring for a function, use\n",
+      "``np.cos?<ENTER>`` (to view the docstring) and ``np.cos??<ENTER>`` (to view\n",
+      "the source code).\n",
+      "\n",
+      "Copies vs. in-place operation\n",
+      "-----------------------------\n",
+      "Most of the functions in `numpy` return a copy of the array argument\n",
+      "(e.g., `np.sort`).  In-place versions of these functions are often\n",
+      "available as array methods, i.e. ``x = np.array([1,2,3]); x.sort()``.\n",
+      "Exceptions to this rule are documented."
+     ]
+    }
+   ],
+   "source": [
+    "np?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Denklem Çözme\n",
+    "2*x0+x1 = 22\n",
+    "x0+5*x1 = 40\n",
+    "x0,x1 ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "katsayilar = np.array([[2,1],[1,5]])\n",
+    "sonuclar = np.array([22,40])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7.777777777777778, 6.444444444444445)"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x0,x1 = np.linalg.solve(katsayilar,sonuclar)\n",
+    "x0,x1"
+   ]
   }
  ],
  "metadata": {
